--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -1,7 +1,7 @@
 {
   "HELLO": "Привіт",
   "Feedback": "Відгук",
-  "User": "Корситувач",
+  "User": "Користувач",
   "MAIN-TEXT": "це система, яка дозволяє  користувачам з'ясувати, наскільки поганий чи наскільки добрий є певний спосіб транспортування. Він також дозволяє користувачам ділитися своїм думками щодо певного способу транспортування, залишаючи відгуки, повідомляючи скарги, публікуючи коментарі та ін",
   "word" : "Свыт"
   }
