--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -3,5 +3,7 @@
   "Feedback": "Відгук",
   "User": "Користувач",
   "MAIN-TEXT": "це система, яка дозволяє  користувачам з'ясувати, наскільки поганий чи наскільки добрий є певний спосіб транспортування. Він також дозволяє користувачам ділитися своїм думками щодо певного способу транспортування, залишаючи відгуки, повідомляючи скарги, публікуючи коментарі та ін",
-  "word" : "Свыт"
+  "word" : "Свыт",
+  "Close": "Закрити",
+  "Save" : "Зберегти"
   }
