add new methods to build Feedbacks without answers by another fields

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -6,7 +6,7 @@
   "word" : "word",
   "Close": "Close",
   "Save" : "Save",
-
+"FeedbackInfo": "Feedback for Transit",
   "By-Hour" : "By hours",
   "By-Stop" : "By stops"
 }
