--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -6,7 +6,7 @@
   "word" : "Свыт",
   "Close": "Закрити",
   "Save" : "Зберегти",
-
+  "FeedbackInfo": "Відгук для маршруту ",
   "By-Hour" : "За годинами",
   "By-Stop" : "За зупинками"
   }
