--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -6,5 +6,7 @@
   "word" : "word",
   "By-Hour" : "Load by hours",
   "By-Stop" : "Load by stops",
-  "Average-Rate" : "Average rate"
+  "Average-Rate" : "Average rate",
+  "Log In" : "Log In",
+  "Log Out" : "Log Out"
 }
