--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -6,5 +6,7 @@
   "word" : "Свыт",
   "By-Hour" : "Завантаження за годинами",
   "By-Stop" : "Завантаження за зупинками",
-  "Average-Rate" : "Загальний рейтинг"
+  "Average-Rate" : "Загальний рейтинг",
+  "Log In" : "Вхід",
+  "Log Out" : "Вихід"
   }
