Add back to previous page button

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -8,5 +8,6 @@
   "By-Stop" : "Load by stops",
   "Average-Rate" : "Average rate",
   "Route" : "Route",
-  "Raiting-Diagram" : "Raiting diagram"
+  "Raiting-Diagram" : "Raiting diagram",
+  "Back": "Back to previous page"
 }
