--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -8,5 +8,6 @@
   "By-Stop" : "Завантаження за зупинками",
   "Average-Rate" : "Загальний рейтинг",
   "Route" : "Маршрут",
-  "Raiting-Diagram" : "Діаграма рейтингу"
+  "Raiting-Diagram" : "Діаграма рейтингу",
+  "Back" : "Повернутись на попередню сторінку"
   }
