Change translation to back button

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,5 +9,5 @@
   "Average-Rate" : "Average rate",
   "Route" : "Route",
   "Raiting-Diagram" : "Reviews",
-  "Back": "Back to previous page"
+  "Back": "Back"
 }
