--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -9,5 +9,5 @@
   "Average-Rate" : "Загальний рейтинг",
   "Route" : "Маршрут",
   "Raiting-Diagram" : "Відгуки",
-  "Back" : "Повернутись на попередню сторінку"
+  "Back" : "Повернутись"
   }
