--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,9 +1,14 @@
 {
   "HELLO": "Hello",
   "Feedback": "Feedback",
-  "User" : "User",
+  "User": "User",
   "MAIN-TEXT": "is a system that allows the end users to find out how bad or how good the certain transportation method is.It also allows users to share what they think of certain transportation method by leaving feedback, reporting complains, posting comments, etc.",
-  "word" : "word",
-  "By-Hour" : "By hours",
-  "By-Stop" : "By stops"
+  "By-Hour": "By hours",
+  "By-Stop": "By stops",
+  "Forward": "Forward",
+  "Backward": "Backward",
+  "Clear": "Clear",
+  "Next": "Next",
+  "Back": "Back",
+  "Choose a stop": "Choose a stop"
 }
