change styles, try to update diagram

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,9 +7,9 @@
   "By-Hour" : "Load by hours",
   "By-Stop" : "Load by stops",
   "Average-Rate" : "Average rate",
-  "Forward direction": "Forward direction",
-  "Backward direction": "Backward direction"
   "Route" : "Route",
   "Raiting-Diagram" : "Reviews",
-  "Back": "Back"
+  "Back": "Back",
+  "Forward direction": "Forward direction",
+  "Backward direction": "Backward direction"
 }
