add new methods to add-feedback

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -13,5 +13,8 @@
   "RateInfo":"Rate for 1 to 10",
   "Route" : "Route",
   "Raiting-Diagram" : "Reviews",
-  "Back": "Back"
+  "Back": "Back",
+  "yes": "Yes",
+  "no": "No",
+  "maybe": "Maybe"
 }
