--- a/src/assets/i18n/ua.json
+++ b/src/assets/i18n/ua.json
@@ -13,5 +13,8 @@
   "RateInfo":"Оцінка від 1 до 10",
   "Route" : "Маршрут",
   "Raiting-Diagram" : "Відгуки",
-  "Back" : "Повернутись"
+  "Back" : "Повернутись",
+  "yes": "Так",
+  "no": "Ні",
+  "maybe": "Можливо"
   }
